--- a/web/esqueci.html
+++ b/web/esqueci.html
@@ -38,7 +38,7 @@
 
 <header>
  <ul>
-     <center> <li><h1>Esqueci minha Senha</h1></li></center>
+      <li><h1>Esqueci minha Senha</h1></li>
           
  
  </ul>
