--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
 					</span>
                                                 <!--Nome para acesso-->	
 					<div class="wrap-input100 rs1 validate-input" data-validate = "Username is required">
-						<input class="input100" type="text" name="nome">
+						<input class="input100" type="text" name="email">
 						<span class="label-input100">Login</span>
 					</div>
 					
